--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Historia 29 KDH</title>
+
+        <link
+            rel="icon"
+            type="image/png"
+            href="./images/favicon-96x96.png"
+            sizes="96x96"
+        />
+        <link rel="icon" type="image/svg+xml" href="./images/favicon.svg" />
+        <link rel="shortcut icon" href="./images/favicon.ico" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="./images/apple-touch-icon.png"
+        />
+
+        <link rel="stylesheet" href="./styles/global.css" />
+        <link rel="stylesheet" href="./styles/index.css" />
     </head>
     <body>
         <header>
