Trivia and footer styles

--- a/src/index.html
+++ b/src/index.html
@@ -228,7 +228,7 @@
                     <span class="date">2011 r.</span>
                     <span class="desc">Obóz w Goreniu Dużym</span>
                 </li>
-                <li>
+                <li class="assistant">
                     <span class="date">08.03.2013</span>
                     <span class="desc"
                         >Mateusz Borowiec zostaje przybocznym</span
@@ -386,27 +386,38 @@
                         href="http://www.complex.com.pl/~lo1/"
                         target="_blank"
                         rel="noopener noreferrer"
-                        >[Strona drużyny 1]</a
+                        ><abbr title="http://www.complex.com.pl/~lo1/"
+                            >[Strona drużyny 1]</abbr
+                        ></a
                     >
                     oraz później
                     <a
                         href="http://29kdh.harcerze.eu"
                         target="_blank"
                         rel="noopener noreferrer"
-                        >[Strona drużyny 2]</a
+                        ><abbr title="http://29kdh.harcerze.eu"
+                            >[Strona drużyny 2]</abbr
+                        ></a
                     >, które już nie funkcjonują. Ich zapisy można znaleźć w
                     archiwum WaybackMachine
                     <a
                         href="https://web.archive.org/web/20050206204626/http://www.complex.com.pl/~lo1/"
                         target="_blank"
                         rel="noopener noreferrer"
-                        >[Strona drużyny 1 WBM]</a
+                        ><abbr
+                            title="https://web.archive.org/web/20050206204626/http://www.complex.com.pl/~lo1/"
+                        >
+                            [Strona drużyny 1 WBM]</abbr
+                        ></a
                     >,
                     <a
                         href="https://web.archive.org/web/2016*/http://29kdh.harcerze.eu"
                         target="_blank"
                         rel="noopener noreferrer"
-                        >[Strona drużyny 2 WBM]</a
+                        ><abbr
+                            title="https://web.archive.org/web/2016*/http://29kdh.harcerze.eu"
+                            >[Strona drużyny 2 WBM]</abbr
+                        ></a
                     >.
                 </li>
                 <li>
@@ -415,7 +426,10 @@
                         href="https://www.youtube.com/channel/UCHd7YpcdfRHdKFwi28OSPGQ"
                         target="_blank"
                         rel="noopener noreferrer"
-                        >[Kanał YT drużyny]</a
+                        ><abbr
+                            title="https://www.youtube.com/channel/UCHd7YpcdfRHdKFwi28OSPGQ"
+                            >[Kanał YT drużyny]</abbr
+                        ></a
                     >, który nadal istnieje.
                 </li>
             </ul>
