fix: History list tag

--- a/src/index.html
+++ b/src/index.html
@@ -406,7 +406,7 @@
                         Jamboree</span
                     >
                 </li>
-                <li class="event">
+                <li class="assistant">
                     <span class="date">10.11.2023</span>
                     <span class="desc">Julia Szostak została przyboczną</span>
                 </li>
