Remove unnecessary abbr tags

--- a/src/index.html
+++ b/src/index.html
@@ -440,38 +440,34 @@
                         href="http://www.complex.com.pl/~lo1/"
                         target="_blank"
                         rel="noopener noreferrer"
-                        ><abbr title="http://www.complex.com.pl/~lo1/"
-                            >[Strona drużyny 1]</abbr
-                        ></a
+                        title="http://www.complex.com.pl/~lo1/"
+                    >
+                        [Strona drużyny 1]</a
                     >
                     oraz później
                     <a
                         href="http://29kdh.harcerze.eu"
                         target="_blank"
                         rel="noopener noreferrer"
-                        ><abbr title="http://29kdh.harcerze.eu"
-                            >[Strona drużyny 2]</abbr
-                        ></a
+                        title="http://29kdh.harcerze.eu"
+                    >
+                        [Strona drużyny 2]</a
                     >, które już nie funkcjonują. Ich zapisy można znaleźć w
                     archiwum WaybackMachine
                     <a
                         href="https://web.archive.org/web/20050206204626/http://www.complex.com.pl/~lo1/"
                         target="_blank"
                         rel="noopener noreferrer"
-                        ><abbr
-                            title="https://web.archive.org/web/20050206204626/http://www.complex.com.pl/~lo1/"
-                        >
-                            [Strona drużyny 1 WBM]</abbr
-                        ></a
+                        title="https://web.archive.org/web/20050206204626/http://www.complex.com.pl/~lo1/"
+                    >
+                        [Strona drużyny 1 WBM]</a
                     >,
                     <a
                         href="https://web.archive.org/web/2016*/http://29kdh.harcerze.eu"
                         target="_blank"
                         rel="noopener noreferrer"
-                        ><abbr
-                            title="https://web.archive.org/web/2016*/http://29kdh.harcerze.eu"
-                            >[Strona drużyny 2 WBM]</abbr
-                        ></a
+                        title="https://web.archive.org/web/2016*/http://29kdh.harcerze.eu"
+                        >[Strona drużyny 2 WBM]</a
                     >.
                 </li>
                 <li>
@@ -480,10 +476,8 @@
                         href="https://www.youtube.com/channel/UCHd7YpcdfRHdKFwi28OSPGQ"
                         target="_blank"
                         rel="noopener noreferrer"
-                        ><abbr
-                            title="https://www.youtube.com/channel/UCHd7YpcdfRHdKFwi28OSPGQ"
-                            >[Kanał YT drużyny]</abbr
-                        ></a
+                        title="https://www.youtube.com/channel/UCHd7YpcdfRHdKFwi28OSPGQ"
+                        >[Kanał YT drużyny]</a
                     >, który nadal istnieje.
                 </li>
             </ul>
